try to get hls.min.js from cdn

--- a/internal/servers/hls/index.html
+++ b/internal/servers/hls/index.html
@@ -43,7 +43,7 @@ html, body {
 <video id="video"></video>
 <div id="message"></div>
 
-<script src="hls.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/0.5.14/hls.min.js"></script>
 
 <script>
 
