Fix it correctly this time

--- a/internal/servers/webrtc/read_index.html
+++ b/internal/servers/webrtc/read_index.html
@@ -59,27 +59,25 @@ const setMessage = (str) => {
   message.innerText = str;
 };
 
-const parseBoolString = (str, defaultVal) => {
-  str = (str || '');
+const generateSdpFragment = (od, candidatesByMedia) => {
+  let frag = 'a=ice-ufrag:' + od.iceUfrag + '\r\n'
+    + 'a=ice-pwd:' + od.icePwd + '\r\n';
 
-	let frag = 'a=ice-ufrag:' + od.iceUfrag + '\r\n'
-		+ 'a=ice-pwd:' + od.icePwd + '\r\n';
+  let mid = 0;
 
-	let mid = 0;
+  for (const media of od.medias) {
+    if (candidatesByMedia[mid] !== undefined) {
+      frag += 'm=' + media + '\r\n'
+        + 'a=mid:' + mid + '\r\n';
 
-	for (const media of od.medias) {
-		if (candidatesByMedia[mid] !== undefined) {
-			frag += 'm=' + media + '\r\n'
-				+ 'a=mid:' + mid + '\r\n';
+      for (const candidate of candidatesByMedia[mid]) {
+        frag += 'a=' + candidate.candidate + '\r\n';
+      }
+    }
+    mid++;
+  }
 
-			for (const candidate of candidatesByMedia[mid]) {
-				frag += 'a=' + candidate.candidate + '\r\n';
-			}
-		}
-		mid++;
-	}
-
-	return frag;
+  return frag;
 };
 
 const loadStream = () => {
@@ -343,6 +341,18 @@ const requestICEServers = () => {
 		.catch((err) => {
 			onError(err.toString());
 		});
+};
+
+ const parseBoolString = (str, defaultVal) => {
+	str = (str || '');
+
+	if (['1', 'yes', 'true'].includes(str.toLowerCase())) {
+		return true;
+	}
+	if (['0', 'no', 'false'].includes(str.toLowerCase())) {
+		return false;
+	}
+	return defaultVal;
 };
 
 const loadAttributesFromQuery = () => {
